--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@
     margin: 0px;padding: 0px;
     box-sizing: border-box;
 }
+header{
+    border: 2px solid red;
+}
+.btn{
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+#sign-in{
+    margin-right: 20px;
+}
