--- a/style.css
+++ b/style.css
@@ -25,7 +25,6 @@ header{
     padding-top: 95px;
     height: 40px;
     box-shadow: 2px 5px 24px rgba(0,0,0,0.1);
-
 }
 .menuitem{
     list-style-type: none;
@@ -46,15 +45,9 @@ header{
 }
 .body{
     padding: 5px;
-    background-color:#EEEEEE;
-    margin-top: 10px;
-}
-.imgslide {
-    margin-top: 10px;
-}
-.imgslide img{
-    width: 100%;
-    height: 500px;
+    background-color:ivory;
+    margin-top:px;
+    box-shadow: 2px 3px 10px rgba(0,0,0,0.2);
 }
 .card-container{
     display: flex;
@@ -72,3 +65,36 @@ header{
     margin: 0px 70px;
     background-color: ivory;
 }
+footer{
+    margin-top: 10px;
+    padding-top: 10px;
+    display: flex;
+    background-color:gray;
+    color: #ffffff;
+}
+.footerbox{
+    width:25%;
+    text-align: center;
+    
+}
+.footer-list{
+    margin-top: 10px;
+}
+.footer-list li{
+    list-style-type: none;
+    line-height: 1.4;
+}
+.footer-list li a{
+    text-decoration: none;
+    color: #ffffff;
+}
+.copy{
+    background-color: #000000;
+    text-align: center;
+    width: 100%;
+}
+.copy p{
+    padding: 5px;
+    color: #ffffff;
+}
+
