--- a/style.css
+++ b/style.css
@@ -2,11 +2,16 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
+
+
+/* hadder section  */
 
 header {
     width: 100%;
-    background-color: burlywood;
+    /* background-color: white; */
+    box-shadow: #80808059 0px 2px 9px;
     height: 50px;
     position: fixed;
 }
@@ -20,6 +25,17 @@ header {
     justify-content: flex-end;
     margin-right: 20px;
     margin-top: -20px;
+}
+
+.btn div input {
+    margin: -2px 1px;
+    padding: 6px 40px;
+    background-color: #f99977;
+    border-radius: 6px;
+    box-shadow: #f9997773 0px 1px 4px;
+    border: none;
+    color: white;
+    cursor: pointer;
 }
 
 #sign-in {
@@ -56,10 +72,13 @@ header {
 
 .body {
     padding: 5px;
-    background-color: ivory;
-    margin-top: px;
+    background-color: snow;
+    margin-top: 0px;
     box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.2);
 }
+
+
+/* info card section  */
 
 .card-container {
     display: flex;
@@ -88,18 +107,40 @@ header {
     margin: 50px;
 }
 
+.course-card {
+    box-shadow: rgb(174, 172, 172) 0px 0px 10px;
+    outline: 1px solid #d6d6d6;
+    background-color: white;
+    height: 280px;
+    width: 252px;
+    margin: 20px;
+}
+
+.course-container div img {
+    height: auto;
+    width: inherit;
+    /* margin: 0px; */
+}
+
+.course-container div h2 {
+    margin: 8px;
+    font-size: 1.2rem;
+    background-color: white;
+}
+
+.course-container div input {
+    border: none;
+    background-color: #2196F3;
+    border-radius: 4px;
+    margin: 14px 9px;
+    padding: 4px 81px;
+    cursor: pointer;
+}
+
 .course-container {
-    border: 2px solid blueviolet;
     display: grid;
     grid-template-columns: repeat(3, 300px);
     justify-content: center;
-}
-
-.course-card {
-    border: 2px solid red;
-    height: 280px;
-    width: 252px;
-    margin: 20px
 }
 
 
