--- a/about.css
+++ b/about.css
@@ -17,7 +17,49 @@
 .team-members {
     display:block;
 }
+@media screen and (max-width:600px){
 
+    #team-card{
+        background-color: white;
+        border-radius: 6px;
+        box-shadow: darkgrey 0px 0px 12px;
+        margin: 10px;
+        height: 100px;
+    }
+
+    #team-card img {
+        height: 19vw;
+        margin: 10px;
+        margin-top: 15px;
+        width: 60px;
+        border-radius: 15%;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    #team-card ul>li{
+        list-style-type: none;
+        float: left;
+        margin-left: 100px;
+        margin-right: -70px;
+        
+    }
+    #team-card h2{
+        text-decoration: underline;
+        font-size: 4vw;
+        margin: -55px;
+        margin-left: 30%;
+        margin-top: -77px;
+    }
+    #team-card p {
+        margin-top: 57px;
+        text-align: center;
+        margin-left: -29px;
+        margin-bottom: 6px;
+    
+    }
+
+}
 .team-card {
     background-color: white;
     border-radius: 6px;
@@ -27,7 +69,7 @@
 }
 
 .team-card img {
-    height: 19vw;
+    height: 73px;
     margin: 10px;
     margin-top: 15px;
     width: 60px;
@@ -45,10 +87,10 @@
 }
 .team-card h2{
     text-decoration: underline;
-    font-size: 4vw;
+    font-size: 2vw;
     margin: -55px;
-    margin-left: 30%;
-    margin-top: -77px;
+    margin-left: 19%;
+    margin-top: -82px;
 }
 
 .our-team {
@@ -59,10 +101,11 @@
 }
 
 .team-card p {
-    margin-top: 57px;
-    text-align: center;
-    margin-left: -29px;
+    margin-top: 60px;
+    /* text-align: center; */
+    margin-left: 200px;
     margin-bottom: 6px;
+}
 
 }
 
