--- a/style.css
+++ b/style.css
@@ -436,7 +436,7 @@
 
 .sub-heading>p {
     padding: 10px;
-    background-color: rgb(207, 203, 203);
+    background-color: #ffffff;
     margin: 20px 0px 0px 0px;
 }
 
